--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <!-- 180x180 - ставим первым для safari -->
+  <link rel="icon" href="/favicon.ico" sizes="any"><!-- 32x32 -->
+  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <link rel="manifest" href="/manifest.webmanifest">
   <link rel="stylesheet" href="css/style.min.css">
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-  />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <title>Лазерная резка</title>
 </head>
+
 <body>
   <header class="header">
     <div class="wrapper">
@@ -30,8 +34,10 @@
           <a href="mailto:amada18@mail.ru" class="contacts__link contacts__link--mail">amada18@mail.ru</a>
         </div>
         <div class="contacts__icons icons">
-          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram.png" alt="telegram"></a>
-          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/whatsapp.png" alt="whatsapp"></a>
+          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram.png"
+              alt="telegram"></a>
+          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/whatsapp.png"
+              alt="whatsapp"></a>
         </div>
       </div>
       <div class="burger">
@@ -45,11 +51,13 @@
   </header>
   <main class="main">
     <section class="primary">
-      <img class="primary__img" src="./assets/images/primary-img-filter.jpg" alt="лазерная резка фон">
+      <img class="primary__img" src="./assets/images/laser-working-of-metal-tem.jpg" alt="лазерная резка фон">
       <div class="wrapper">
         <div class="content">
           <h1 class="content__title">Лазерная резка металла в Ижевске</h1>
-          <p class="content__subtitle">Профессиональная обработка металла с безупречным качеством и точностью. Мы предлагаем передовое оборудование и опытных специалистов для создания идеальных контуров и деталей вашего проекта.</p>
+          <p class="content__subtitle">Профессиональная обработка металла с безупречным качеством и точностью. Мы
+            предлагаем передовое оборудование и опытных специалистов для создания идеальных контуров и деталей вашего
+            проекта.</p>
           <button class="content__button">оставить заявку</button>
         </div>
       </div>
@@ -62,7 +70,10 @@
           </div>
           <div class="desc">
             <h2 class="desc__title">Почему выбирают нас</h2>
-            <p class="desc__text">Мы гордимся своей репутацией надежного и качественного поставщика. Обладая передовым оборудованием и опытными специалистами, мы гарантируем безупречное качество и внимание к деталям. Приоритетом для нас является высокий стандарт точности и профессионализма, что делает нас идеальным партнером для реализации вашего проекта.</p>
+            <p class="desc__text">Мы гордимся своей репутацией надежного и качественного поставщика. Обладая передовым
+              оборудованием и опытными специалистами, мы гарантируем безупречное качество и внимание к деталям.
+              Приоритетом для нас является высокий стандарт точности и профессионализма, что делает нас идеальным
+              партнером для реализации вашего проекта.</p>
           </div>
         </div>
         <div class="advantages">
@@ -71,21 +82,24 @@
               <img class="icon-box__icon" src="./assets/images/icons/podhod.png" alt="индивидуальный подход">
             </div>
             <h3 class="advantage__title">Индивидуальный подход</h3>
-            <p class="advantage__desc">Мы создаем индивидуальные проекты любой сложности и объема, основываясь на схемах и техническом задании заказчика.</p>
+            <p class="advantage__desc">Мы создаем индивидуальные проекты любой сложности и объема, основываясь на схемах
+              и техническом задании заказчика.</p>
           </div>
           <div class="advantage">
             <div class="icon-box">
               <img class="icon-box__icon" src="./assets/images/icons/kachestvo.png" alt="гарантия качества">
             </div>
             <h3 class="advantage__title">Гарантия качества</h3>
-            <p class="advantage__desc">Мы обеспечиваем высокий уровень стандартов качества, чтобы наши изделия служили вам долгое время и удовлетворяли все ваши потребности.</p>
+            <p class="advantage__desc">Мы обеспечиваем высокий уровень стандартов качества, чтобы наши изделия служили
+              вам долгое время и удовлетворяли все ваши потребности.</p>
           </div>
           <div class="advantage">
             <div class="icon-box">
               <img class="icon-box__icon" src="./assets/images/icons/proizvodstvo.png" alt="производство">
             </div>
             <h3 class="advantage__title">Производство</h3>
-            <p class="advantage__desc">Наш собственный производственный комплекс с передовым оборудованием обеспечивает полный контроль и высокое качество наших продуктов.</p>
+            <p class="advantage__desc">Наш собственный производственный комплекс с передовым оборудованием обеспечивает
+              полный контроль и высокое качество наших продуктов.</p>
           </div>
         </div>
       </div>
@@ -198,7 +212,10 @@
                 </div>
                 <div class="conten__desc desc">
                   <h2 class="desc__title">Лазерная резка металла</h2>
-                  <div class="desc__text">Мы предоставляем услуги лазерной резки для различных видов металла. Наша компания специализируется на резке листового металла, профильного металлопроката и труб. Наше передовое оборудование и опытные специалисты обеспечивают точность, высокое качество и эффективность в каждом процессе резки.</div>
+                  <div class="desc__text">Мы предоставляем услуги лазерной резки для различных видов металла. Наша
+                    компания специализируется на резке листового металла, профильного металлопроката и труб. Наше
+                    передовое оборудование и опытные специалисты обеспечивают точность, высокое качество и эффективность
+                    в каждом процессе резки.</div>
                 </div>
               </div>
               <div class="infoblocks">
@@ -206,37 +223,43 @@
                   <div class="number-box">
                     <span class="number-box__number">1</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
+                    зубонарезном оборудовании</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">2</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
+                    зубонарезном оборудовании</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">3</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
+                    зубонарезном оборудовании</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">4</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
+                    зубонарезном оборудовании</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">5</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
+                    зубонарезном оборудовании</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">6</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
+                    зубонарезном оборудовании</p>
                 </div>
               </div>
             </div>
@@ -247,7 +270,9 @@
                 </div>
                 <div class="conten__desc desc">
                   <h2 class="desc__title">Токарно-фрезерные работы</h2>
-                  <div class="desc__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi enim veniam recusandae velit ex et deserunt officiis voluptas dolorum ducimus, iusto placeat id, voluptate pariatur similique unde nobis. Quo, eaque!</div>
+                  <div class="desc__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi enim veniam
+                    recusandae velit ex et deserunt officiis voluptas dolorum ducimus, iusto placeat id, voluptate
+                    pariatur similique unde nobis. Quo, eaque!</div>
                 </div>
               </div>
               <div class="infoblocks">
@@ -255,24 +280,31 @@
                   <div class="number-box">
                     <span class="number-box__number">1</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
+                    зубонарезном оборудовании</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">2</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
+                    зубонарезном оборудовании</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">3</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
+                    зубонарезном оборудовании</p>
                 </div>
               </div>
             </div>
-            <div class="tabs__content" data-tab="gibka">Yes Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
-            <div class="tabs__content" data-tab="svarka">True Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
+            <div class="tabs__content" data-tab="gibka">Yes Lorem, ipsum dolor sit amet consectetur adipisicing elit. At
+              sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis
+              dicta laboriosam odio.</div>
+            <div class="tabs__content" data-tab="svarka">True Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit!
+              Debitis dicta laboriosam odio.</div>
           </div>
         </div>
       </div>
@@ -281,13 +313,15 @@
       <div class="wrapper">
         <div class="request__title-box title-box">
           <h2 class="title-box__title">Оставьте заявку</h2>
-          <p class="title-box__subtitle">Мы свяжемся с вами, чтобы обсудить задачу, техническое задание, объёмы и стоимость работы.</p>
+          <p class="title-box__subtitle">Мы свяжемся с вами, чтобы обсудить задачу, техническое задание, объёмы и
+            стоимость работы.</p>
         </div>
         <form class="request__form form" action="#">
-          <input type="text" class="form__input" placeholder="Имя" >
-          <input type="text" class="form__input" placeholder="E-mail или телефон" >
-          <input type="submit" class="form__submit" value="Отправить" >
-          <p class="request__rules">Нажимая на кнопку «Отправить заявку», вы даете согласие на обработку персональных данных и соглашаетесь с политикой конфиденциальности.</p>
+          <input type="text" class="form__input" placeholder="Имя">
+          <input type="text" class="form__input" placeholder="E-mail или телефон">
+          <input type="submit" class="form__submit" value="Отправить">
+          <p class="request__rules">Нажимая на кнопку «Отправить заявку», вы даете согласие на обработку персональных
+            данных и соглашаетесь с политикой конфиденциальности.</p>
         </form>
       </div>
     </section>
@@ -300,7 +334,8 @@
         </div>
         <div class="contacts__contact-us contact-us">
           <h3 class="contact-us__title">Связаться с нами</h3>
-          <p class="contact-us__desc">Готовы ответить на ваши вопросы и помочь вам!<br> Не стесняйтесь обращаться к нам. Ждем ваших звонков, писем и сообщений.
+          <p class="contact-us__desc">Готовы ответить на ваши вопросы и помочь вам!<br> Не стесняйтесь обращаться к нам.
+            Ждем ваших звонков, писем и сообщений.
           </p>
           <div class="contact-us__wrap">
             <a href="tel:+79512084892" class="contact-us__link">8 951 208 48 92</a>
@@ -329,8 +364,10 @@
           <a href="mailto:amada18@mail.ru" class="contacts__link contacts__link--mail">amada18@mail.ru</a>
         </div>
         <div class="contacts__icons icons">
-          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram.png" alt="telegram"></a>
-          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/whatsapp.png" alt="whatsapp"></a>
+          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram.png"
+              alt="telegram"></a>
+          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/whatsapp.png"
+              alt="whatsapp"></a>
         </div>
       </div>
     </div>
@@ -339,4 +376,5 @@
   <script src="js/main.min.js"></script>
 
 </body>
+
 </html>
