--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <!-- 180x180 - ставим первым для safari -->
   <link rel="icon" href="/favicon.ico" sizes="any"><!-- 32x32 -->
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <!-- <link rel="icon" href="/icon.svg" type="image/svg+xml"> -->
   <link rel="manifest" href="/manifest.webmanifest">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
