--- a/index.html
+++ b/index.html
@@ -376,6 +376,17 @@
       </div>
     </div>
   </footer>
+  <div class="modal">
+    <div class="pop-up">
+      <h2 class="pop-up__title">Оставить заявку</h2>
+      <form class="pop-up__form">
+        <input class="pop-up__form-input" type="text" name="name" placeholder="Имя">
+        <input class="pop-up__form-input" type="text" name="contact" placeholder="Телефон или E-mail">
+        <input class="pop-up__form-submit" type="submit" value="отправить заявку">
+      </form>
+      <span class="pop-up__diss">+</span>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="js/main.min.js"></script>
 
